--- a/emprestimo.css
+++ b/emprestimo.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #F2F5FD;
 }
 
 button {
@@ -14,9 +15,11 @@ button {
 .cabecalho {
     display: flex;
     justify-content: space-around;
-    color: #fff; /* Cor do texto no cabeçalho */
+    color: #fff;
+    /* Cor do texto no cabeçalho */
     background-color: white;
-    position: fixed; /* Torna o cabeçalho fixo */
+    position: fixed;
+    /* Torna o cabeçalho fixo */
     width: 100%;
     top: 0;
     left: 0;
@@ -29,11 +32,12 @@ button {
 .navCabecalho {
     padding-top: 30px;
 }
+
 h1 {
     color: white;
     padding: 10px 100px;
     background-color: #9D0D21;
-    margin-top: 100px;
+    margin-top: 85px;
 }
 
 h2 {
@@ -70,12 +74,11 @@ h2 {
 }
 
 .conteudo-inicial {
-    background-color: white;
     display: flex;
     justify-content: space-evenly;
-    margin-top: 80px;
     margin-bottom: 80px;
-    padding-top: 20px;
+    margin-top: 50px;
+    padding-top: 10px;
     padding-bottom: 20px;
     color: white;
 }
@@ -83,20 +86,51 @@ h2 {
 .nav-inicial-interno {
     background-color: white;
     border: 2px solid black;
-    width: 200px;
+    border-radius: 10px;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.button.nav.inicial {
+    margin: 10px 10px;
+    background-color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    padding: 5px 10px 5px 10px;
+    border: white;
+    padding-bottom: 20px;
+}
+
+.button.nav.inicial:hover {
+    color: #9D0D21;
+    border-bottom: 2px solid #022AFF;
 }
 
 .conteudo-inicial-interno {
-    background-color: #592C12;
-    width: 450px;
-    padding: 15px 15px 15px 15px;
+    background-color: #9D0D21;
+    width: 550px;
     text-align: justify;
-    box-shadow: 5px 5px 10px #230f3a;
-    border-radius: 5px 5px 5px 5px;
+    box-shadow: 5px 5px 10px #999ba083;
+    border-radius: 10px 20px 10px 20px;
+    color: white;
+}
+
+p {
+    padding: 10px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
+}
+
+
+.h2.emprestimo {
+    padding: 5px 10px 5px 10px;
+    color: white;
+    text-transform: initial;
 }
 
 .conteudo-final {
-    border: 2px solid black;
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 80px;
@@ -105,6 +139,53 @@ h2 {
 form {
     border: 2px solid black;
     width: 700px;
+    height: 500px;
+    padding: 10px 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    font-size: 25px;
+}
+
+.titulo{
+    font-weight: bold;
+}
+
+.input {
+    border: 2px solid white;
+    border-bottom: 2px solid black;
+    width: 400px;
+    text-align: center;
+    font-size: 25px;
+}
+
+#exemplo-valor {
+    width: 350px;
+    font-size: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#tipo-emprestimo-texto {
+    border: 2px solid black;
+}
+
+.button-forms {
+    width: 350px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.efeito.button {
+    font-size: 20px;
+}
+
+#result {
+    width: 300px;
+    font-size: 20px;
+    padding-left: 10px;
 }
 
 aside {
@@ -112,8 +193,6 @@ aside {
     border: 2px solid black;
     width: 700px;
 }
-
-
 
 footer {
     border-top: 2px solid black;
@@ -123,10 +202,20 @@ footer {
     background-color: lightgray;
 }
 
+#divFooterLogo {
+    display: flex;
+    line-height: 0;
+    align-items: center;
+    flex-direction: column;
+}
+
 .logoFooter {
     width: 100px;
-    padding-left: 25px;
+}
 
+#pFooter {
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .footerImg {
@@ -136,6 +225,25 @@ footer {
     padding-right: 10px;
 }
 
-#contato {
-    padding-left: 40px;
+.hover-trigger ul {
+    display: none;
+    padding-right: 20px;
+    transition: all 0.3s ease;
+}
+
+.hover-trigger:hover ul {
+    display: block;
+    text-align: justify;
+}
+
+ol {
+    font-size: 20px;
+}
+
+.titulo-lista {
+    font-weight: bold;
+}
+
+.conteudo-lista {
+    line-height: 30px;
 }
