--- a/index.css
+++ b/index.css
@@ -127,13 +127,10 @@ button {
     margin-bottom: 40px;
 }
 
-.botaoInterno {
-    
-}
-
 .conteudo {
     display: flex;
-    width: 1200px;
+    width: 1080px;
+    padding: 15px 15px;
 }
 
 .principal {
@@ -187,9 +184,14 @@ button {
 }
 
 .interno.cont {
+    line-height: 25px;
     text-align: justify;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+article p {
+    height: 180px;
 }
 
 .borda.cont {
@@ -207,6 +209,7 @@ button {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 40px;
 }
 
 .depoiments {
@@ -217,9 +220,19 @@ button {
 }
 
 .interno.par {
-    padding-top: 150px;
+    padding-top: 80px;
     padding-left: 10px;
     padding-right: 10px;
+    height: 200px;
+    line-height: 30px;
+}
+
+.interno.par2 {
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 200px;
+    line-height: 30px;
 }
 
 footer {
@@ -230,10 +243,20 @@ footer {
     background-color: lightgray;
 }
 
+#divFooterLogo {
+    display: flex;
+    line-height: 0;
+    align-items: center;
+    flex-direction: column;
+}
+
 .logoFooter {
     width: 100px;
-    padding-left: 25px;
+}
 
+#pFooter {
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .footerImg {
